--- a/pages/charts.html
+++ b/pages/charts.html
@@ -21,7 +21,7 @@
 		<div class="side-bar">
 			<nav>
 				<li>
-					<a class="side-bar__link" href="./index.html"><img src="./../assets/images/index/profile.svg"
+					<a class="side-bar__link" href="./../index.html"><img src="./../assets/images/index/profile.svg"
 							alt="иконка ссылки на раздел профиль">Профиль</a>
 				</li>
 				<li>
