resp profile finish

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>
 					<div class="profile-user__kkal">
 						<div class="profile-user__kkal-wrapper">
-							<div>
+							<div class="profile-user__kkal-wrapper-data">
 								<div class="profile-user__kkal-block">
 									<h3 class="profile-user__kkal-name font-black">Употреблено калорий:</h3>
 									<div class="profile-user__kkal-amount">1360</div>
@@ -115,7 +115,7 @@
 									<div class="profile-user__macro-scale-line profile-user__macro-scale-line_carbs">
 									</div>
 								</div>
-								<div class="profile-user__macro-amount">142.6 г</div>
+								<div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span">142.6</span> г</div>
 							</div>
 							<div class="profile-user__macro-block">
 								<h3>Белки</h3>
@@ -123,7 +123,7 @@
 									<div class="profile-user__macro-scale-line profile-user__macro-scale-line_protein">
 									</div>
 								</div>
-								<div class="profile-user__macro-amount">94.4 г</div>
+								<div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span">94.4</span> г</div>
 							</div>
 							<div class="profile-user__macro-block">
 								<h3>Жиры</h3>
@@ -131,7 +131,7 @@
 									<div class="profile-user__macro-scale-line profile-user__macro-scale-line_fat">
 									</div>
 								</div>
-								<div class="profile-user__macro-amount">47.1 г</div>
+								<div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span">47.1</span> г</div>
 							</div>
 						</div>
 					</div>
@@ -235,6 +235,7 @@
 	<!-- Инна -->
 	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
 
 	<script src="./modules/profile.js"></script>
 	<script src="./modules/profile_user notification pop-up.js"></script>
