--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<input id = "customization__text_surname" class="customization__text" type="text" placeholder="Фамилия">
 						<input id = "customization__text_bday" class="customization__text" type="text" placeholder="Дата рождения">
 						<input id = "customization__text_email" class="customization__text" type="text" placeholder="E-mail">
-						<input class="customization__text_password customization__text" type="text" placeholder="Пароль">
+						<input id="customization__text_password" class="customization__text" type="text" placeholder="Пароль">
 						<p class = "customization__title_description">Задать цель, кг:</p>
 						<input type = "number" placeholder="Введите число от 0 до 100" class="customization__text " max = "100" min = "0" step = "1" >
 						<button >Сохранить</button>
@@ -144,10 +144,10 @@
         </div>
         <!-- side-bar -->
         <!-- main -->
-        <main class="profile">
-            <div class="profile-welcome">
-                <div class="profile-welcome__wripper">
-                    <form action="#" class="profile-welcome__form" id = "loginForm">
+        <main class="profile">`
+            <div class="profile-welcome" id = "profile-welcome">
+                <div class="profile-welcome__wripper" id="profile-welcome__wripper" >
+                    <form action="#" class="profile-welcome__form" >
                         <img class="profile-welcome__img" src="./assets/images/index/circle.svg"
                             alt="логотип приложения в виде графика-доната">
                         <p class="profile-welcome__form-greet font-black">Добро пожаловать!</p>
@@ -156,7 +156,7 @@
                             >
                             <input  id = "loginPassword" type="password" placeholder="Пароль" class="profile-welcome__form-input">
                         </div>
-                        <button class="profile-welcome__form-button" onclick="loginForm()">Войти</button>
+                        <button class="profile-welcome__form-button" onclick="loginUser()">Войти</button>
                     </form>
                     <!-- Анжела - кнопка для окна Регистрация -->
                     <button
@@ -168,16 +168,16 @@
                   </button>
                   <!-- Анжела - кнопка для окна Регистрация -->
                 </div>
-                <div class="profile-paternity font-black">Calorie tracker © 2023</div>
-                <div class="profile-user">
-                    <img class="profile-user__settings" src="./assets/images/index/settings.svg"
+                <div class="profile-paternity font-black" id = "profile-paternity">Calorie tracker © 2023</div>
+                <div class="profile-user" id = "profile-user">
+                    <img class="profile-user__settings" id="profile-user__settings" src="./assets/images/index/settings.svg"
                     alt="шестеренки для выхода в меню настроек" onclick="openDropdown()">
                     <!-- выпадающее меню -шестерёнки -->
                     <div class="dropdown">
                         <div id="myDropdown" class="dropdown-content">
                         <a href="#" onclick = "openCustomization()" >Редактировать профиль</a>
                         <a href="#">Сменить аккаунт</a>
-                        <a href="#">Выйти</a>
+                        <a href="#" onclick="exit()" >Выйти</a>
                         <div class="dropdown__pop-up_close" id = "dropdown__pop-up_close" onclick="closedropdown ()" >&#10006</div>
                         </div>
                     </div>
@@ -355,6 +355,7 @@
 	<script src="./modules/profile.js"></script>
 	<script src="./modules/profile_user notification pop-up.js"></script>
 	<script src="./modules/registration.js"></script>
+	<script src="./modules/customization.js"></script>
 </body>
 
 </html>
