added small changes in WaterTracker

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -191,6 +191,24 @@
 						</div>
 					</div>
 
+					<!-- скрытый див №4 выпадающего списка, строки продуктов сюда ---->
+
+					<div class="accordeon4 accordeon_hidden">
+						<div class="diary-table-string">
+							<div class="diary-table-string__meal-name">
+								Тест
+							</div>
+							<div class="diary-table-string__column-names">
+								<div>160</div>
+								<div>120</div>
+								<div>3</div>
+								<div>2</div>
+								<div>5</div>
+							</div>
+						</div>
+
+						<!-------------------------->
+
 					<div class="diary-table-string">
 						<div class="diary-table-string__meal-name diary-table-string__meal-name_color_orange">
 							Итого
@@ -219,12 +237,17 @@
 						<div>Трекер воды</div>
 					</div>
 					<div>
-						<span class="diary-water-tracker__crrnt-res diary-water-tracker__top-res_font_inter">0</span> <span class="diary-water-tracker__crrnt-res-ml">мл</span><span class="diary-water-tracker__top-res diary-water-tracker__top-res_font_inter"> / 1800</span> <span class="diary-water-tracker__top-res">мл</span>
+						<span class="diary-water-tracker__crrnt-res diary-water-tracker__top-res_font_inter">0</span> <span class="diary-water-tracker__crrnt-res-ml">мл</span><span class="diary-water-tracker__top-res diary-water-tracker__top-res_font_inter"> / 2000</span> <span class="diary-water-tracker__top-res">мл</span>
 					</div>
 				</div>
 				<div class="diary-water-tracker__text">Отслеживайте свои ежедневные цели по поддержанию водного баланса. Если у вас нормальный вес, то рекомендовано 25-30 мл жидкости на 1 кг массы тела. То есть если вы весите 60 кг, то выпивать нужно 30х60 = 1800 мл или 1,8 л в день.</div>
 
 					<form class="diary-water-tracker__form">
+
+						<input class="diary-water-tracker__input" type="radio" name="glass" value="10" id="id0"/>
+						<label for="id0" class="diary-water-tracker__label">
+						<img class="diary-water-tracker__img" src="./../assets/images/diary/diary-glass-of-water.svg">
+						</label>
 					
 						<input class="diary-water-tracker__input" type="radio" name="glass" value="9" id="id1"/>
 						<label for="id1" class="diary-water-tracker__label">
