Alla's changes check

--- a/index.html
+++ b/index.html
@@ -192,16 +192,12 @@
 						<button class="profile-welcome__form-button" onclick="loginUser()">Войти</button>
 					</form>
                     
-					 <!-- Анжела - кнопка для окна Регистрация -->
-                     <button
-                     class="profile-welcome__button-reg"
-                     id = "registration__pop-up_open"
-                     onclick="openRegistration()"
-                   >
-                     Регистрация
-                   </button>
-                   <!-- Анжела - кнопка для окна Регистрация -->
-				</div>
+					<!-- Анжела - кнопка для окна Регистрация -->
+					<button class="profile-welcome__button-reg" id="registration__pop-up_open" onclick="openRegistration()">
+					Регистрация
+					</button>
+					<!-- Анжела - кнопка для окна Регистрация -->
+					</div>
 				<div class="profile-paternity font-black" id = "profile-paternity">Calorie tracker © 2023</div>
 
 				<div class="profile-user" id = "profile-user">
