side-bar links fixed

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="side-bar">
       <nav>
         <li>
-          <a class="side-bar__link" href="./index.html"><img src="./assets/images/index/profile.svg"
+          <a class="side-bar__link side-bar__link_profile" href="#"><img src="./assets/images/index/profile.svg"
               alt="иконка ссылки на раздел профиль">Профиль</a>
         </li>
         <li class="side-bar__menu">
@@ -337,14 +337,14 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
 
-  <script src="./modules/profile.js"></script>
   <script src="./modules/notification.js"></script>
+  <script src="./modules/profile.js"></script>
+  <script src="./modules/registration.js"></script>
+  <script src="./modules/customization.js"></script>
+  <script src="./modules/side-bar.js"></script>
 
 </body>
 
-<script src="./modules/profile.js"></script>
-<script src="./modules/registration.js"></script>
-<script src="./modules/customization.js"></script>
-</body>
+
 
 </html>
