--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
       <div>
         <p class="profile-notification__text">Чтобы продолжить, <a class="profile-notification__enter"
             href="#">войдите</a> в личный кабинет</p>
-        <p class="profile-notification__text"> или <a class="profile-notification__reg" href=""
-            onclick="openRegistration()">зарегистрируйтесь</a></p>
+        <p class="profile-notification__text"> или <a class="profile-notification__reg" href="#" onclick="openRegistration()"
+            >зарегистрируйтесь</a></p>
       </div>
     </div>
   </div>
