--- a/pages/diary.html
+++ b/pages/diary.html
@@ -156,7 +156,7 @@
 						<div class="diary-table-string diary-table-string_color_blue">
 							<div class="diary-table-string__meal-name">
 								Перекус
-								<button class="diary-table-string__add-btn" id="button-lunch">
+								<button class="diary-table-string__add-btn" id="button-snack">
 								<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
@@ -228,6 +228,7 @@
 			
 						<!-- синий подвальчик таблицы дневника -->
                 <div class="diary-diet-tracker__bottom-bar"></div>
+			</div>
            
 
                         <!-- трекер воды -->
