created the button for saving dates to profile

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 						<div class="profile-user__states">
 							<div class="profile-user__states-block">
 								<div class="profile-user__states-name">Вес</div>
-								<div class="profile-user__states-value font-black">60 кг</div>
+								<div class="profile-user__states-value font-black current-weight">60 кг</div>
 							</div>
 							<div class="profile-user__states-block">
 								<div class="profile-user__states-name">Рост</div>
-								<div class="profile-user__states-value font-black">166 см</div>
+								<div class="profile-user__states-value font-black current-growth">166 см</div>
 							</div>
 							<div class="profile-user__states-block">
 								<div class="profile-user__states-name">Цель</div>
@@ -137,7 +137,7 @@
 								</div>
 								<div class="profile-user__kkal-block">
 									<h3 class="profile-user__kkal-name font-black">Осталось калорий:</h3>
-									<div class="profile-user__kkal-amount">240</div>
+									<div class="profile-user__kkal-amount left-calories">240</div>
 								</div>
 							</div>
 							<div class="profile-user__doughnut-chart">
@@ -179,6 +179,7 @@
 					</div>
 				</div>
         </div>
+        <div class="profile-RSK__recommendations-container">
         <section class="profile-RSK">
           <h1 class="profile-RSK__title">
             Вычислить рекомендованную <br />
@@ -292,6 +293,13 @@
             </div>
           </div>
         </section>
+        <button
+              type="submit"
+              class="profile-RSK__form-button profile-RSK__form-button-save calculate-rsk "
+            >
+              Сохранить данные в профиль
+            </button>
+          </div>
       </main>
 
 		<!-- Инна -->
