--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <p class="registration__title_description">Введите Ваши данные:</p>
         <form action="">
           <input id="registration__text_name" class="registration__text registration__text_name" type=" text"
-            onKeyUp="if(/[^а-яА-ЯёЁ]/i.test(this.value)){this.value='';}" placeholder="Имя" name="username" />
+          onKeyUp="this.value=this.value.trim();if(/[^a-zA-Zа-яА-ЯёЁ]/i.test(this.value)){this.value='';}" placeholder="Имя" name="username" />
           <input class="registration__text registration__text_surname" id="registration__text_surname" type="text"
-            onKeyUp="if(/[^а-яА-ЯёЁ]/i.test(this.value)){this.value='';}" placeholder="Фамилия" name="surname" />
+          onKeyUp="this.value=this.value.trim();if(/[^a-zA-Zа-яА-ЯёЁ]/i.test(this.value)){this.value='';}" placeholder="Фамилия" name="surname" />
           <div>
             <input type="date" id="registration__text_bday" name="bday"
               class="registration__text_bday registration__text" />
@@ -62,15 +62,15 @@
         <p class="customization__title">Настройки</p>
         <p class="customization__title_description">Редактировать информацию</p>
         <form id="profile">
-          <input id="customization__text_name" class="customization__text" type="text" placeholder="Имя">
-          <input id="customization__text_surname" class="customization__text" type="text" placeholder="Фамилия">
+          <input id="customization__text_name" onKeyUp="this.value=this.value.trim();if(/[^a-zA-Zа-яА-ЯёЁ]/i.test(this.value)){this.value='';}" class="customization__text" type="text" placeholder="Имя">
+          <input id="customization__text_surname" onKeyUp="this.value=this.value.trim();if(/[^a-zA-Zа-яА-ЯёЁ]/i.test(this.value)){this.value='';}" class="customization__text" type="text" placeholder="Фамилия">
           <input id="customization__text_bday" class="customization__text" type="text" placeholder="Дата рождения">
-          <input id="customization__text_email" class="customization__text" type="text" placeholder="E-mail">
+          <input id="customization__text_email" onKeyUp="this.value = this.value.replace(/[^a-zA-Z0-9@._-]/g, '');" class="customization__text" type="text" placeholder="E-mail">
           <input id="customization__text_password" class="customization__text" type="text" placeholder="Пароль">
           <p class="customization__title_description">Задать цель, кг:</p>
           <input type="number" placeholder="Введите число от 0 до 100" class="customization__text " max="100" min="0"
             step="1">
-          <button >Сохранить</button>
+          <button onclick="customizationSave()">Сохранить</button>
 
         </form>
 
