--- a/pages/diary.html
+++ b/pages/diary.html
@@ -78,10 +78,11 @@
 
 						<!-- скрытый див выпадающего списка, строки продуктов сюда ---->
 						<div class="accordeon1 accordeon_hidden">
-							<div class="diary-table-string-1">
+							<!-- <div class="diary-table-string-1">
 
 							</div>
 
+							</div> -->
 
 							<!-------------------------->
 							<!-- Алла -->
