--- a/pages/diary.html
+++ b/pages/diary.html
@@ -78,13 +78,7 @@
 
 						<!-- скрытый див выпадающего списка, строки продуктов сюда ---->
 						<div class="accordeon1 accordeon_hidden">
-							<!-- <div class="diary-table-string-1">
-
-							</div>
-
-							</div> -->
-
-							<!-------------------------->
+							
 							<!-- Алла -->
 							<!-- Форма поиска продукта по штрих-коду -->
 							<form class="diary__form__search">
@@ -94,6 +88,7 @@
 								<div id="search__show__result-1"></div>
 							</form>
 						</div>
+						<!-------------------------->
 
 						<div class="diary-table-string diary-table-string_color_blue">
 							<div class="diary-table-string__meal-name">
@@ -114,10 +109,6 @@
 						<!-- скрытый див №2 выпадающего списка, строки продуктов сюда ---->
 
 						<div class="accordeon2 accordeon_hidden">
-
-							<div class="diary-table-string-1 ">
-							</div>
-
 
 							<!-- Алла -->
 							<!-- Форма поиска продукта по штрих-коду -->
@@ -148,8 +139,6 @@
 
 						<!-- скрытый див №3 выпадающего списка, строки продуктов сюда ---->
 						<div class="accordeon3 accordeon_hidden">
-
-							<div class="diary-table-string-1 "></div>
 
 							<!-- Алла -->
 							<!-- Форма поиска продукта по штрих-коду -->
@@ -182,18 +171,6 @@
 
 						<div class="accordeon4 accordeon_hidden">
 
-							<div class="diary-table-string">
-								<div class="diary-table-string__meal-name">
-									Тест
-								</div>
-								<div class="diary-table-string__column-names">
-									<div>160</div>
-									<div>120</div>
-									<div>3</div>
-									<div>2</div>
-									<div>5</div>
-								</div>
-							</div>
 							<!-- Алла -->
 							<!-- Форма поиска продукта по штрих-коду -->
 							<form class="diary__form__search">
@@ -205,43 +182,31 @@
 						</div>
 					</div>
 
-
-
-					<!-- скрытый див №4 выпадающего списка, строки продуктов сюда ---->
-
-					<div class="accordeon4 accordeon_hidden">
-
-						<div class="diary-table-string">
-							<div class="diary-table-string__meal-name">
-								Тест
-							</div>
-							<div class="diary-table-string__column-names">
-								<div>160</div>
-								<div>120</div>
-								<div>3</div>
-								<div>2</div>
-								<div>5</div>
-							</div>
-						</div>
-
 						<!-------------------------->
+
 
 						<div class="diary-table-string">
 							<div class="diary-table-string__meal-name diary-table-string__meal-name_color_orange">
 								Итого
 							</div>
-							<div class="diary-table-string-2"></div>
+							<div class="diary-table-string__column-names diary-table-string__column-names_color_dark-blue diary-table-string-2">
+								<div>Вес, г</div>
+								<div>Ккал</div>
+								<div class="diary-macro__carbo-amount">У</div>
+								<div class="diary-macro__protein-amount">Б</div>
+								<div class="diary-macro__fats-amount">Ж</div>
+							</div>
 						</div>
 
 					</div>	
 			
 						<!-- синий подвальчик таблицы дневника -->
                 <div class="diary-diet-tracker__bottom-bar"></div>
-			</div>
+			
            
 
                         <!-- трекер воды -->
-            <div class="diary-water-tracker">
+            	<div class="diary-water-tracker">
 				<div class="diary-water-tracker__top-bar">
 					<div class="diary-water-tracker__top-bar-name">
 						<img class="diary-water-tracker__img-water-drop" src="./../assets/images/diary/diary-water-droplet 1.png" alt="капля воды">
@@ -315,6 +280,8 @@
 
 						</form>
 					</div>
+
+			</div>		
 			</main>
 			<!-- Алла -->
 			<!-- Поп ап добавить новый продукт -->
