calculation of the dropped and left weight

--- a/pages/charts.html
+++ b/pages/charts.html
@@ -141,11 +141,11 @@
 				</div>
 				<div class="charts-weight__changes">
 					<div class="charts-weight__dropped">
-						<p class="charts-grid-weight-dropped-text">Сброшено - <span class="charts-kg-red">5 кг</span>
+						<p class="charts-grid-weight-dropped-text">Сброшено <span class="charts-kg-red"></span>
 						</p>
 					</div>
 					<div class="charts-weight__remained">
-						<p class="charts-grid-weight-remained-text">Осталось - <span class="charts-kg-green">5 кг</span>
+						<p class="charts-grid-weight-remained-text">Осталось <span class="charts-kg-green"></span>
 						</p>
 					</div>
 				</div>
@@ -153,6 +153,9 @@
 					<div class="charts-weight__current">
 						<canvas id="charts-weight__current-lb"></canvas>
 					</div>
+				</div>
+				<div>
+					<button class="charts-reset__button">Сброс</button>
 				</div>
 			</div>
 
