--- a/pages/diary.html
+++ b/pages/diary.html
@@ -54,8 +54,9 @@
 				<div class="diary-diet-tracker">
 					<!-- кнопка-заголовок таблицы дневника -->
 					<button class="diary-diet-tracker__calendar-btn">
-						<span class="diary-diet-tracker__btn-text">Сегодня</span>
-						<div class="diary-diet-tracker__btn-arrow"></div>
+						<!-- <span class="diary-diet-tracker__btn-text">Сегодня</span> -->
+						<input type="date">
+						<!-- <div class="diary-diet-tracker__btn-arrow"></div> -->
 					</button>
 
 					<!-- основная таблица дневника -->
