--- a/pages/diary.html
+++ b/pages/diary.html
@@ -316,18 +316,18 @@
 								</div>
 								<div class="newproduct__popup_table">
 									<label for="newproduct__popup-fat" class="popup__new-product-label">Жиры:</label>
-									<input type="number" id="newproduct__popup-fat" name="fat" placeholder="грамм">
+									<input type="number" id="newproduct__popup-fat" name="fat" placeholder="/100г">
 								</div>
 								<div class="newproduct__popup_table">
 									<label for="newproduct__popup-carbs"
 										class="popup__new-product-label">Углеводы:</label>
-									<input type="number" id="newproduct__popup-carbs" name="carbs" placeholder="грамм">
+									<input type="number" id="newproduct__popup-carbs" name="carbs" placeholder="/100г">
 								</div>
 								<div class="newproduct__popup_table">
 									<label for="newproduct__popup-protein"
 										class="popup__new-product-label">Белки:</label>
 									<input type="number" id="newproduct__popup-protein" name="protein"
-										placeholder="грамм">
+										placeholder="/100г">
 								</div>
 							</div>
 							<button type="submit" id="newproduct__popup-add">Добавить</button>
