--- a/pages/charts.html
+++ b/pages/charts.html
@@ -21,19 +21,19 @@
 		<div class="side-bar">
 			<nav>
 				<li>
-					<a class="side-bar__link side-bar__link_profile" href="#"><img
+					<a class="side-bar__link side-bar__link_profile" href="../index.html"><img
 							src="../assets/images/index/profile.svg" alt="иконка ссылки на раздел профиль">Профиль</a>
 				</li>
 				<li class="side-bar__menu">
-					<a class="side-bar__link  side-bar__link_diary" href="#"><img src="../assets/images/index/diary.svg"
+					<a class="side-bar__link  side-bar__link_diary" href="./diary.html"><img src="../assets/images/index/diary.svg"
 							alt="иконка ссылки на раздел дневник">Дневник</a>
 				</li>
 				<li class="side-bar__menu">
-					<a class="side-bar__link side-bar__link_charts" href="#"><img src="../assets/images/index/graph.svg"
+					<a class="side-bar__link side-bar__link_charts" href="./charts.html"><img src="../assets/images/index/graph.svg"
 							alt="иконка ссылки на раздел динамика">Динамика</a>
 				</li>
 				<li class="side-bar__menu">
-					<a class="side-bar__link  side-bar__link_articles" href="#"><img
+					<a class="side-bar__link  side-bar__link_articles" href="./articles.html"><img
 							src="../assets/images/index/sampling.svg" alt="иконка ссылки на раздел Статьи">Статьи</a>
 				</li>
 			</nav>
