--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
     <div class="side-bar">
       <nav>
         <li>
-          <a class="side-bar__link side-bar__link_profile" href="#"><img src="./assets/images/index/profile.svg"
+          <a class="side-bar__link side-bar__link_profile" href="./index.html"><img src="./assets/images/index/profile.svg"
               alt="иконка ссылки на раздел профиль">Профиль</a>
         </li>
         <li class="side-bar__menu">
-          <a class="side-bar__link  side-bar__link_diary" href="#"><img src="./assets/images/index/diary.svg"
+          <a class="side-bar__link  side-bar__link_diary" href="./pages/diary.html"><img src="./assets/images/index/diary.svg"
               alt="иконка ссылки на раздел дневник">Дневник</a>
         </li>
         <li class="side-bar__menu">
-          <a class="side-bar__link side-bar__link_charts" href="#"><img src="./assets/images/index/graph.svg"
+          <a class="side-bar__link side-bar__link_charts" href="./pages/charts.html"><img src="./assets/images/index/graph.svg"
               alt="иконка ссылки на раздел динамика">Динамика</a>
         </li>
         <li class="side-bar__menu">
-          <a class="side-bar__link  side-bar__link_articles" href="#"><img src="./assets/images/index/sampling.svg"
+          <a class="side-bar__link  side-bar__link_articles" href="./pages/articles.html"><img src="./assets/images/index/sampling.svg"
               alt="иконка ссылки на раздел Статьи">Статьи</a>
         </li>
       </nav>
@@ -254,7 +254,7 @@
             </div>
             <div class="profile-RSK__form-element">
               <p class="profile-RSK__form-attribute">Возраст:</p>
-              <input type="number" value="" class="font-black profile-RSK__form-input input-age" />
+              <input type="number" value="" class="font-black profile-RSK__form-input input-age"/>
             </div>
             <div class="profile-RSK__form-element">
               <p class="profile-RSK__form-attribute">Пол:</p>
@@ -274,11 +274,11 @@
             </div>
             <div class="profile-RSK__form-element">
               <p class="profile-RSK__form-attribute">Вес, кг:</p>
-              <input type="number" class="font-black profile-RSK__form-input input-weight" />
+              <input type="number" class="font-black profile-RSK__form-input input-weight"/>
             </div>
             <div class="profile-RSK__form-element">
               <p class="profile-RSK__form-attribute">Рост, см:</p>
-              <input type="number" class="font-black profile-RSK__form-input input-growth" />
+              <input type="number" class="font-black profile-RSK__form-input input-growth"/>
             </div>
           </div>
           <div class="profile-RSK__form-add"> <button type="submit" class="profile-RSK__form-button calculate-rsk">
