--- a/pages/diary.html
+++ b/pages/diary.html
@@ -103,6 +103,7 @@
                   <div>У</div>
                   <div>Б</div>
                   <div>Ж</div>
+
                 </div>
               </div>
 
@@ -511,7 +512,7 @@
                       type="number"
                       id="newproduct__popup-fat"
                       name="fat"
-                      placeholder="грамм"
+                      placeholder="на 100г"
                     />
                   </div>
                   <div class="newproduct__popup_table">
@@ -524,7 +525,7 @@
                       type="number"
                       id="newproduct__popup-carbs"
                       name="carbs"
-                      placeholder="грамм"
+                      placeholder="на 100г"
                     />
                   </div>
                   <div class="newproduct__popup_table">
@@ -537,7 +538,7 @@
                       type="number"
                       id="newproduct__popup-protein"
                       name="protein"
-                      placeholder="грамм"
+                      placeholder="на 100г"
                     />
                   </div>
                 </div>
