added some topics, validation of inputs

--- a/pages/articles-pages/healthy-self-esteem.html
+++ b/pages/articles-pages/healthy-self-esteem.html
@@ -12,8 +12,9 @@
     <link rel="shortcut icon" href="../../assets/icons/calories.png" />
     <link rel="stylesheet" href="../../assets/styles/scss/main.css" />
   </head>
-  <body class="topic-wrapper">
-    <main>
+  <body class="topic-wrapper-body">
+    <div class="wrapper wrapper_topic">
+
       <div class="side-bar">
         <nav>
           <a class="topic__back" href="../articles.html"
@@ -25,6 +26,7 @@
           >
         </nav>
       </div>
+      <main>
       <div class="topic">
         <h1 class="topic__title">ЗДОРОВАЯ САМООЦЕНКА</h1>
         <p class="topic__text">
@@ -140,5 +142,6 @@
     <footer>
       <p class="articles-copy">Calorie tracker &copy; 2023</p>
     </footer>
+    </div>
   </body>
 </html>
