--- a/pages/articles-pages/psychosomatics.html
+++ b/pages/articles-pages/psychosomatics.html
@@ -13,8 +13,9 @@
     <link rel="stylesheet" href="../../assets/styles/scss/main.css" />
   </head>
 
-  <body class="topic-wrapper">
-    <main>
+  <body class="topic-wrapper-body">
+    <div class="wrapper wrapper_topic">
+
       <div class="side-bar">
         <nav>
           <a class="topic__back" href="../articles.html"
@@ -26,6 +27,7 @@
           >
         </nav>
       </div>
+      <main>
       <div class="topic">
         <h1 class="topic__title">ПСИХОСОМАТИКА ЛИШНЕГО ВЕСА</h1>
         <p class="topic__text">
@@ -130,5 +132,6 @@
     <footer>
       <p class="articles-copy">Calorie tracker &copy; 2023</p>
     </footer>
+    </div>
   </body>
 </html>
