--- a/pages/articles-pages/eat-often.html
+++ b/pages/articles-pages/eat-often.html
@@ -11,8 +11,9 @@
     <link rel="shortcut icon" href="../../assets/icons/calories.png" />
     <link rel="stylesheet" href="../../assets/styles/scss/main.css" />
   </head>
-  <body class="topic-wrapper">
-    <main>
+  <body class="topic-wrapper-body">
+    <div class="wrapper wrapper_topic">
+    
       <div class="side-bar">
         <nav>
           <a class="topic__back" href="../articles.html"
@@ -24,6 +25,7 @@
           >
         </nav>
       </div>
+      <main>
       <div class="topic">
         <h1 class="topic__title">ПОЧЕМУ НУЖНО ЕСТЬ ЧАСТО?</h1>
         <p class="topic__text">
@@ -150,5 +152,6 @@
     <footer>
       <p class="articles-copy">Calorie tracker &copy; 2023</p>
     </footer>
+    </div>
   </body>
 </html>
